# macemu

./: README.md
BasiliskII/src/Windows/: Makefile.in  acinclude.m4  configure.ac
BasiliskII/src/slirp/: tcp_subr.c
BasiliskII/src/uae_cpu/: Makefile.in  build68k.c  configure.ac
BasiliskII/src/uae_cpu_2021/: build68k.c
cxmon/src/: mon.cpp
